# AmnesiaTheDarkDescent

./: .clang-format  .gitignore  .gitmodules  Buffer.cpp  Buffer.h  BufferHelper.cpp  BufferHelper.h  CMakeLists.txt  CMakeSettings.json  LICENSE-assets  Makefile  README.md  Session.vim  VertexBufferDrawRequest.cpp  VertexBufferDrawRequest.h  vcpkg.json
HPL2/: CMakeLists.txt
HPL2/cmake/: UtilityFunctions.cmake
HPL2/core/: CMakeLists.txt  HPL2.vcxproj  generate_combos.sh  shader_compile.py
HPL2/core/include/: BuildID_HPL2_0.h  FixPreprocessor.h  hpl.h
HPL2/core/resource/: ShaderList.fsl  bloom_add_posteffect.frag.fsl  blur_posteffect.frag.fsl  color_conv_posteffect.frag.fsl  common.sh  cs_copy_region.sc  cs_gdr_copy_z.sc  cs_gdr_downscale_hi_z.sc  cs_occlude_props.sc  dds_flash.frag.fsl  dds_insanity_posteffect.frag.fsl  dds_inventory_posteffect.frag.fsl  decal.frag.fsl  decal.vert.fsl  deferred_fog.frag.fsl  deferred_fog.resource.h.fsl  deferred_fog.vert.fsl  deferred_fog_fullscreen.frag.fsl  deferred_light.vert.fsl  deferred_light_box.frag.fsl  deferred_light_pointlight.frag.fsl  deferred_light_resource.h.fsl  deferred_light_spotlight.frag.fsl  deferred_resources.h.fsl  final_posteffect.frag.fsl  fs_alpha_reject.sc  fs_basic_solid_diffuse.sc  fs_basic_solid_illumination.sc  fs_basic_solid_z.sc  fs_basic_translucent_material.sc  fs_basic_uv.sc  fs_color_1.sc  fs_dds_enemy_glow.sc  fs_dds_flash.sc  fs_dds_inventory_screen_effect.sc  fs_dds_outline.sc  fs_dds_posteffect_insanity.sc  fs_decal.sc  fs_decal_material.sc  fs_deferred_fog.sc  (+77 more)
HPL2/core/sources/: BuildID_HPL2_0_Win32.cpp
HPL2/core/test/: HPLMemberLayout_test.cpp
HPL2/core/tools/: ShaderUtil.cmake  generate_combo.py
HPL2/dependencies/AngelScript/: CMakeLists.txt
HPL2/include/: hpl.h
HPL2/include/engine/: Engine.h  SaveGame.h
HPL2/include/graphics/: AssetBuffer.h  BindlessDescriptorPool.h  CommandBufferPool.h  CopyTextureSubpass4.h  DebugDraw.h  DecalCreator.h  DrawPacket.h  Enum.h  ForgeHandles.h  ForgeRenderer.h  ForwardResources.h  Frame.h  Geometry.h  GeometrySet.h  Graphics.h  GraphicsAllocator.h  GraphicsBuffer.h  GraphicsTypes.h  Image.h  ImageBindlessPool.h  ImmediateDrawBatch.h  IndexPool.h  LowLevelGraphics.h  Material.h  MaterialDescriptor.h  MaterialResource.h  MaterialType_BasicSolid.h  MaterialType_BasicTranslucent.h  MaterialType_Decal.h  Mesh.h  MeshCreator.h  MeshHelper.h  MeshUtility.h  PassHBAOPlus.h  PostEffectComposite.h  PostEffect_Bloom.h  PostEffect_ColorConvTex.h  PostEffect_ImageTrail.h  PostEffect_RadialBlur.h  RangeSubsetAlloc.h  (+17 more)
HPL2/include/gui/: Gui.h  GuiGfxElement.h  GuiSet.h
HPL2/include/impl/: CollideShapeNewton.h  LegacyVertexBuffer.h  LowLevelGraphicsSDL.h  PhysicsBodyNewton.h  PhysicsWorldNewton.h
HPL2/include/math/: Math.h  MathTypes.h  Sphere.h  Vector.h  cFrustum.h
HPL2/include/physics/: PhysicsBody.h  PhysicsController.h  PhysicsWorld.h  VerletParticle.h
HPL2/include/resources/: BinaryBuffer.h  MaterialManager.h  Resources.h  TextureManager.h  WorldLoaderHplMap.h
HPL2/include/scene/: Beam.h  BillBoard.h  Camera.h  DummyRenderable.h  Entity3D.h  FogArea.h  GuiSetEntity.h  Light.h  LightBox.h  LightPoint.h  LightSpot.h  MeshEntity.h  ParticleEmitter.h  RenderableContainer.h  RopeEntity.h  Scene.h  SceneTypes.h  SubMeshEntity.h  Viewport.h
HPL2/include/stl/: transform.h
HPL2/include/system/: Bootstrap.h
HPL2/include/windowing/: NativeWindow.h
HPL2/resource/: GTAO.comp.fsl  ShaderList.fsl  color_conv_posteffect.frag.fsl  color_utils.h.fsl  copy_refraction.comp.fsl  dds_flash.frag.fsl  debug.frag.fsl  debug.vert.fsl  debug_2D.vert.fsl  debug_resource.h.fsl  debug_uv.frag.fsl  debug_uv.vert.fsl  decal_shade.frag.fsl  decal_shade.vert.fsl  deferred_common.h.fsl  deferred_light_pointlight.frag.fsl  deferred_light_resource.h.fsl  deferred_light_spotlight.frag.fsl  deferred_light_stencil.frag.fsl  deferred_resources.h.fsl  depth_clear.vert.fsl  depth_clear_shade.frag.fsl  depth_clear_shade.vert.fsl  depth_shade.frag.fsl  depth_shade.vert.fsl  empty.frag.fsl  final_posteffect.frag.fsl  forward_diffuse.frag.fsl  forward_diffuse.vert.fsl  forward_resource.h.fsl  forward_shader_common.h.fsl  fullscreen.vert.fsl  generate_hi_z.comp.fsl  gui.frag.fsl  immediate.vert.fsl  immediate_2D.vert.fsl  immediate_color.frag.fsl  immediate_resource.h.fsl  light_clusters_clear.comp.fsl  light_cull_resources.h.fsl  (+44 more)
HPL2/resource/legacy/: solid_diffuse.frag.fsl
HPL2/sources/engine/: Engine.cpp
HPL2/sources/graphics/: AssetBuffer.cpp  BindlessDescriptorPool.cpp  CopyTextureSubpass4.cpp  DebugDraw.cpp  DecalCreator.cpp  DrawPacket.cpp  Enum.cpp  ForgeHandles.cpp  ForgeRenderer.cpp  ForwardResources.cpp  FrameReset.h  GeometrySet.cpp  Graphics.cpp  GraphicsAllocator.cpp  GraphicsBuffer.cpp  GraphicsTypes.cpp  Image.cpp  ImageBindlessPool.cpp  ImmediateDrawBatch.cpp  IndexPool.cpp  LowLevelGraphics.cpp  Material.cpp  MaterialResource.cpp  MaterialType_BasicSolid.cpp  MaterialType_BasicTranslucent.cpp  MaterialType_Decal.cpp  MaterialType_Water.cpp  Mesh.cpp  MeshCreator.cpp  MeshUtility.cpp  PassHBAOPlus.cpp  PostEffectComposite.cpp  PostEffect_Bloom.cpp  (+21 more)
HPL2/tools/: CMakeLists.txt
amnesia/: CMakeLists.txt  gpu.cfg
amnesia/game/: CMakeLists.txt  LuxArea.cpp  LuxArea.h  LuxBase.cpp  LuxCommentaryIcon.cpp  LuxConfigHandler.cpp  LuxCredits.h  LuxDebugHandler.cpp  LuxDemoEnd.cpp  LuxEffectHandler.h  LuxEffectRenderer.cpp  LuxEffectRenderer.h  LuxEnemy.cpp  LuxEnemy.h  LuxEnemyPathfinder.cpp  LuxEnemyPathfinder.h  LuxEnemy_Grunt.cpp  LuxEnemy_Grunt.h  LuxEnemy_ManPig.cpp  LuxEnemy_ManPig.h  LuxEnemy_WaterLurker.cpp  LuxEnemy_WaterLurker.h  LuxEntity.h  LuxHandObject_Melee.cpp  LuxHandObject_Melee.h  LuxHelpFuncs.cpp  LuxInputHandler.cpp  LuxInputHandler.h  LuxInsanityHandler.cpp  LuxInventory.cpp  LuxInventory.h  LuxJournal.cpp  LuxJournal.h  LuxMainMenu.cpp  LuxMainMenu.h  LuxMainMenu_KeyConfig.cpp  LuxMainMenu_Options.cpp  LuxMap.cpp  LuxMap.h  LuxMapHandler.cpp  (+26 more)
amnesia/launcher/: Main.cpp
amnesia/src/: CMakeLists.txt  cmake_install.cmake  copy_game_directory.cmake
(+1093 files in other folders)
